--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Micro Contest challenge web site Node library",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "test": "jest --config jestconfig.json",
+    "test:dev": "jest --watchAll --config jestconfig.json"
   },
   "repository": {
     "type": "git",
@@ -17,13 +19,11 @@
   },
   "homepage": "https://github.com/ThomRick/microcontest-lib#readme",
   "devDependencies": {
-    "@types/chai": "^4.0.8",
-    "@types/mocha": "^2.2.44",
-    "@types/node": "^8.0.54",
-    "@types/sinon": "^4.0.0",
-    "chai": "^4.1.2",
-    "mocha": "^4.0.1",
-    "sinon": "^4.1.2",
-    "typescript": "^2.6.2"
-  }
+    "@types/jest": "^23.1.4",
+    "@types/node": "^10.5.2",
+    "jest": "^23.3.0",
+    "ts-jest": "^23.0.0",
+    "typescript": "^2.9.2"
+  },
+  "dependencies": {}
 }
