--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,11 +14,9 @@
       "outDir": "bin",
       "typeRoots": [
         "node_modules/@types"
-      ]
+      ],
+      "rootDir": "src"
     },
-    "include": [
-      "src"
-    ],
     "exclude": [
       "node_modules"
     ]
